# audimon

./: Cargo.toml  README.md
daemon/: Cargo.toml  build.rs
daemon/dsp/: sonify.dsp  volume.dsp
daemon/signal/: Cargo.toml
daemon/signalz/: Cargo.toml
daemon/src/: audio.rs  cpal_sink.rs  local_sink.rs  main.rs  webrtc_sink.rs
signal/src/: lib.rs
src/client/: main.rs
src/daemon/: main.rs
web/: index.html  index.js  package-lock.json  package.json  style.css
