[package]
name = "audimon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
webrtc = "0.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.52"
clap = "3.0.8"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
signal = {path = "signal" }
env_logger = "0.9.0"




